feat: visualize optional FSPM plant canopy
